# bidding-system

./: README  configure.ac
include/: bidder.h  manager.h  socket.h  support.h
src/: Makefile.am  bidder.cpp  main.cpp  manager.cpp  socket.cpp
